test/ui/test/metadata/empty-list-with-comma.stderr
error: found ‘,’ but expected value
 --> ${TEST_FOLDER}/metadata/empty-list-with-comma.metadata:3:2
  |
3 | [,]
  |  ^
  |

error: aborting due to previous error

